simple swagger docs, redirect for not found link
